--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,11 @@
 :root {
+  /* color */
   --white-color: #fafafa;
   --medium-grey-color: #616161;
   --dark-grey-color: #424242;
   --black-color: #212121;
 
+  /* size */
   --larger-font-size: 6em;
 }
 
@@ -15,9 +17,15 @@ body {
 .inner {
   max-width: 1280px;
   margin: 0 auto;
+  position: relative;
 }
 
-/* MAIN */
+img {
+  display: block;
+  /* background-color: darkturquoise; */
+}
+
+/* MAIN PAGE */
 #main {
   width: 100%;
   height: 100vh;
@@ -26,6 +34,7 @@ body {
 }
 
 #main .inner {
+  /* background-color: pink; */
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -33,7 +42,7 @@ body {
   align-items: center;
 }
 
-#main .inner #who-am-i {
+#main #who-am-i {
   font-family: 'Bebas Neue', cursive;
   color: var(--black-color);
   font-weight: 700;
@@ -43,13 +52,31 @@ body {
   margin-bottom: .5em;
 }
 
-#main .inner #hello {
+#main #hello {
   text-align: center;
   color: var(--medium-grey-color);
   font-weight: 700;
 }
 
-#main .inner #hello strong {
+#main #hello strong {
   color: var(--dark-grey-color);
   font-size: 1.3em;
+}
+
+#main .me-smart {
+  width: 20%;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+#main .me-shake {
+  width: 30%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+#main .fade-in {
+  opacity: 0;
 }
