--- a/css/style.css
+++ b/css/style.css
@@ -8,18 +8,21 @@
   --black-color: #212121;
 
   /* size */
-  --title-font-size: 1.5em;
-  --subject-font-size: 3em;
-  --mobile-large-font-size: 5em;
-  --larger-font-size: 6em;
+  --small-font-size: .9em;
+  --basic-font-size: 1em;
+  --medium-font-size: 1.3em;
+  --biggest-font-size: 6em;
 
   --padding-size: .5em;
+  --line-height: 2em;
 
 }
 
 body {
   font-family: 'Nanum Gothic', sans-serif;
-  line-height: 2em;
+  font-size: var(--basic-font-size);
+  color: var(--black-color);
+  line-height: var(--line-height);
   background-color: var(--white-color);
 }
 
@@ -33,10 +36,8 @@ img {
   display: block;
 }
 
-.subject {
-  font-size: var(--subject-font-size);
-  font-weight: bold;
-  margin: var(--padding-size);
+.hidden {
+  display: none;
 }
 
 
@@ -44,9 +45,7 @@ img {
 #main1 {
   width: 100%;
   height: 100vh;
-  background-color: var(--white-color);
-  background-size: cover;
-  background-attachment: fixed;
+  position: relative;
 }
 
 #main1 .inner {
@@ -59,24 +58,22 @@ img {
 
 #main1 #who-am-i {
   font-family: 'Bebas Neue', cursive;
-  color: var(--black-color);
   font-weight: 700;
   font-style: italic;
-  font-size: var(--larger-font-size);
+  font-size: var(--biggest-font-size);
   letter-spacing: .04em;
-  margin-bottom: .5em;
+  margin-bottom: var(--padding-size);
 }
 
 #main1 #hello {
   text-align: center;
   color: var(--medium-grey-color);
   font-weight: 700;
-  font-size: 0.85em;
 }
 
 #main1 #hello strong {
   color: var(--dark-grey-color);
-  font-size: 1.3em;
+  font-size: var(--medium-font-size);
 }
 
 #main1 .me-smart {
@@ -97,113 +94,71 @@ img {
   opacity: 0;
 }
 
-
-/* MAIN2 - profile */
-#profile {
-  background-color: var(--white-color);
+/* side menu */
+#menu__icon {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: var(--padding-size);
+  cursor: pointer;
 }
 
-.profile__introduce {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+#menu__icon span {
+  vertical-align: middle;
 }
 
-.profile__introduce .profile-img {
+#side__menu {
+  background-color: rgba(255, 255, 255, 0.7);
   width: 20%;
-  margin-bottom: var(--padding-size);
-}
-
-.profile__introduce h3 {
-  font-size: var(--title-font-size);
-  font-weight: 700;
-  color: var(--black-color);
-}
-
-.profile__introduce h5 {
-  font-weight: 500;
-  color: var(--dark-grey-color);
-}
-
-.profile__introduce .job {
-  background-color: pink;
-  margin-top: var(--padding-size);
-  padding: calc(var(--padding-size)*1/2) calc(var(--padding-size)*3);
-  border-radius: 30em;
-  color: var(--white-color);
-  font-size: var(--title-font-size);
-  font-weight: 700;
-}
-
-.profile__introduce .comment {
-  font-style: italic;
-  color: var(--dark-grey-color);
-  margin: var(--padding-size) 0;
-}
-
-.profile__section {
-  background-color: pink;
-  width: 80%;
-  height: 100px;
-  margin: 10px;
-  padding: 5px;
-}
-
-.profile__section .title {
-  color: var(--dark-grey-color);
-  font-weight: bold;
-}
-
-.profile__section .contents {
-  font-size: .9rem;
-}
-
-
-/* CONTACT */
-#contact {}
-
-#contact .inner {
   height: 100%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+}
+
+#side__menu ul {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
+  gap: var(--padding-size);
+  margin: var(--padding-size);
 }
 
-#contact .contact__comment {
-  text-align: center;
+#side__menu li {
+  cursor: pointer;
+  margin: var(--padding-size);
   color: var(--medium-grey-color);
-  line-height: 3em;
-  font-size: var(--title-font-size);
+  font-size: var(--small-font-size);
 }
 
-#contact .contact__comment .mail {
-  color: var(--black-color);
-  font-weight: bold;
-}
-
-#contact img {
-  width: 40%;
+#side__menu span {
+  align-self: flex-end;
+  cursor: pointer;
 }
 
 
-/* FOOTER */
-footer {
-  /* background-color: var(--white-color); */
-  background-color: #fff;
-  padding: calc(var(--padding-size)*2);
+/* 반응형 responsive */
+/* 랩톱 - 1024px */
+@media (max-width:1024px) {
+  :root {
+    --basic-font-size: .9em;
+    --medium-font-size: 1.2em;
+    --biggest-font-size: 5em;
+  }
 }
 
-footer .footer__copyright {
-  display: block;
-  /* font-size: var(--title-font-size); */
-  color: var(--light-grey-color);
-  text-align: center;
+/* 태블릿 - 768px */
+@media (max-width:768px) {
+  #side__menu {
+    width: 30%;
+  }
 }
 
-/* responsive */
-@media (max-width:400px) {
-  #main1 #who-am-i {
-    font-size: var(--mobile-large-font-size);
+/* 모바일 - 425px */
+@media (max-width:425px) {
+  :root {
+    --basic-font-size: .7em;
+    --medium-font-size: 1em;
+    --biggest-font-size: 5em;
   }
 }
