--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@
   --biggest-font-size: 6em;
 
   --padding-size: .5em;
+  --margin-size: 1em;
   --line-height: 2em;
 
 }
@@ -39,6 +40,10 @@ img {
 
 .hidden {
   display: none;
+}
+
+.title {
+  font-weight: 700;
 }
 
 
@@ -102,6 +107,7 @@ img {
   right: 0;
   margin: var(--padding-size);
   cursor: pointer;
+  z-index: 9;
 }
 
 #menu__icon span {
@@ -110,12 +116,13 @@ img {
 
 #side__menu {
   background-color: rgba(255, 255, 255, 0.7);
-  width: 20%;
+  width: 30%;
   height: 100%;
   position: fixed;
   top: 0;
   bottom: 0;
   right: 0;
+  z-index: 9;
 }
 
 #side__menu ul {
@@ -139,11 +146,109 @@ img {
 
 
 /* PROFILE PAGE */
-#profile-page {
-  height: 100vh;
+#profile-page {}
+
+#profile-page .inner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: calc(var(--margin-size)*3) var(--margin-size);
 }
 
-#profile-page .inner {}
+#profile {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+
+/* profile info (image) */
+#profile__info {
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#profile__info img {
+  width: 60%;
+  margin-bottom: var(--margin-size);
+}
+
+#profile__info .title {
+  font-size: var(--small-font-size);
+}
+
+#profile__info .profile__job {
+  background-color: pink;
+  padding: 0 var(--margin-size);
+  border-radius: 10px;
+  color: var(--white-color);
+}
+
+
+/* profile about (skill, charactor) */
+#profile__about {
+  width: 65%;
+}
+
+/* profile - skills */
+#profile__about .about__skill {
+  margin-bottom: calc(var(--margin-size)*4);
+}
+
+#profile__about .about__skill ul.skills {
+  margin-top: var(--margin-size);
+}
+
+#profile__about .about__skill .skills li {
+  display: flex;
+  align-items: center;
+}
+
+#profile__about .about__skill .skills li .fa-brands {
+  width: 7%;
+}
+
+#profile__about .about__skill .skills li .skill__name {
+  width: 23%;
+  font-size: var(--small-font-size);
+  color: var(--medium-grey-color);
+}
+
+#profile__about .about__skill .skills li .material-icons.lignt-color {
+  color: var(--light-grey-color);
+}
+
+/* profile - charactor */
+
+#profile__about .about__charactor ul.charactors {
+  margin-top: var(--margin-size);
+  display: flex;
+  flex-wrap: wrap;
+}
+
+#profile__about .about__charactor .charactors li {
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+}
+
+#profile__about .about__charactor .charactors li .char__kor {
+  text-align: center;
+}
+
+#profile__about .about__charactor .charactors li .char__eng {
+  text-align: center;
+  font-size: var(--small-font-size);
+  color: var(--light-grey-color);
+}
+
+
+#introduce {
+  /* height: 100vh; */
+}
 
 
 /* 반응형 responsive */
@@ -159,7 +264,29 @@ img {
 /* 태블릿 - 768px */
 @media (max-width:768px) {
   #side__menu {
-    width: 30%;
+    width: 40%;
+  }
+}
+
+@media (max-width:600px) {
+  :root {
+    --small-font-size: .7em;
+  }
+
+  #profile {
+    flex-direction: column;
+  }
+
+  #profile__info {
+    width: 100%;
+  }
+
+  #profile__info img {
+    width: 40%;
+  }
+
+  #profile__about {
+    width: 100%;
   }
 }
 
