--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 :root {
   /* color */
   --white-color: #fafafa;
+  --pink-color: #FFC0CB;
   --light-grey-color: #BDBDBD;
   --medium-grey-color: #616161;
   --dark-grey-color: #424242;
@@ -146,10 +147,13 @@ img {
 
 
 /* PROFILE PAGE */
-#profile-page {}
+#profile-page {
+  height: 100vh;
+}
 
 #profile-page .inner {
   width: 100%;
+  height: 100%;
   /* display: flex;
   justify-content: center;
   align-items: center; */
@@ -182,7 +186,7 @@ img {
 }
 
 #profile__info .profile__job {
-  background-color: pink;
+  background-color: var(--pink-color);
   padding: 0 var(--margin-size);
   border-radius: 10px;
   color: var(--white-color);
@@ -268,6 +272,8 @@ img {
 #introduce {
   /* height: 100vh; */
 }
+
+#introduce .inroduce__contents {}
 
 
 /* 반응형 responsive */
