--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,10 @@ img {
   font-weight: 700;
 }
 
+a {
+  all: unset;
+}
+
 
 /* MAIN FIRST PAGE */
 #first-page {
@@ -107,59 +111,11 @@ img {
   opacity: 0;
 }
 
-/* side menu */
-/* #first-page #menu__icon {
-  position: fixed;
-  top: 0;
-  right: 0;
-  margin: var(--padding-size);
-  cursor: pointer;
-  z-index: 9;
-}
-
-#first-page #menu__icon span {
-  vertical-align: middle;
-}
-
-#first-page #side__menu {
-  background-color: rgba(255, 255, 255, 0.7);
-  width: 30%;
-  height: 100%;
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  z-index: 9;
-}
-
-#first-page #side__menu ul {
-  display: flex;
-  flex-direction: column;
-  gap: var(--padding-size);
-  margin: var(--padding-size);
-}
-
-#first-page #side__menu li {
-  cursor: pointer;
-  margin: var(--padding-size);
-  color: var(--medium-grey-color);
-  font-size: var(--small-font-size);
-}
-
-#first-page #side__menu span {
-  align-self: flex-end;
-  cursor: pointer;
-} */
-
 
 /* PROFILE PAGE */
-
 #profile-page .inner {
   width: 100%;
   height: 100%;
-  /* display: flex;
-  justify-content: center;
-  align-items: center; */
   padding: calc(var(--margin-size)*3) var(--margin-size);
 }
 
@@ -305,8 +261,6 @@ img {
   justify-content: center;
 }
 
-#project .inner {}
-
 #project .project__title {
   font-size: var(--title-font-size);
   text-align: center;
@@ -315,6 +269,7 @@ img {
 #project .project__img {
   width: 40vw;
   height: 40vw;
+  cursor: pointer;
 }
 
 #project .web__title {
@@ -360,6 +315,10 @@ img {
   background-image: url('https://images.unsplash.com/photo-1597307673540-7749c8acab96?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTF8fHBsYW50JTIwaGFuZHxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=600&q=60');
 }
 
+#project .project__js {
+  justify-content: space-around;
+}
+
 #project .project__js .js__momentum {
   background-image: url('../img/momentum_thumbnail.jpeg');
 }
@@ -375,6 +334,7 @@ img {
 /* CONTACT */
 #contact {
   margin: var(--margin-size);
+  margin-top: calc(var(--margin-size)*8);
 }
 
 #contact .contact__title {
@@ -495,6 +455,16 @@ footer .copyright {
 
   #profile__about {
     width: 100%;
+  }
+
+  #project .project__js .project__img {
+    width: 27vw;
+    height: 27vw;
+  }
+
+  #project .project__js .project__img .color-opacity {
+    width: 27vw;
+    height: 27vw;
   }
 }
 
