detail page 만드는 중

--- a/css/detail.css
+++ b/css/detail.css
@@ -1,7 +1,6 @@
 :root {
   /* color */
   --white-color: #fafafa;
-  --pink-color: #FFC0CB;
   --light-grey-color: #BDBDBD;
   --medium-grey-color: #616161;
   --dark-grey-color: #424242;
@@ -11,20 +10,18 @@
   --small-font-size: .8em;
   --basic-font-size: 1em;
   --medium-font-size: 1.3em;
-  --title-font-size: 1.7em;
-  --banner-font-size: 2em;
   --biggest-font-size: 3em;
 
-  --padding-size: .5em;
-  --margin-size: 4em;
-  --border-radius: 2em;
-
+  --padding-size: .4em;
+  --margin-size: 3em;
+  --border-radius: 10px;
 }
 
 body {
   font-size: var(--basic-font-size);
   font-family: 'Nanum Gothic', sans-serif;
   color: var(--black-color);
+  background-color: var(--white-color);
 }
 
 .inner {
@@ -32,20 +29,23 @@ body {
   margin: 0 auto;
 }
 
-a {
+a,
+button {
   all: unset;
+}
+
+.title {
+  font-family: 'Bebas Neue', cursive;
 }
 
 /* MAIN PAGE */
 #main__page {
-  background-image: url('../img/canvas-bg.jpg');
   background-size: cover;
   background-position: center;
   padding: var(--margin-size);
 }
 
 #main__page .inner {
-  background-color: var(--white-color);
   padding: var(--margin-size);
   border-radius: var(--border-radius);
   display: flex;
@@ -53,30 +53,62 @@ a {
 }
 
 #main__page .main__title {
-  font-family: 'Bebas Neue', cursive;
   font-size: var(--biggest-font-size);
 }
 
 #main__page .version {
-  font-family: 'Bebas Neue', cursive;
   font-size: var(--medium-font-size);
   color: var(--medium-grey-color);
   padding: var(--padding-size) 0;
 }
 
 #main__page a {
-  width: 25%;
   cursor: pointer;
   background-color: var(--light-grey-color);
   color: var(--dark-grey-color);
   font-size: var(--small-font-size);
   text-align: center;
-  padding: var(--padding-size) 0;
-  border-radius: 10px;
+  padding: var(--padding-size);
+  border-radius: var(--border-radius);
 }
 
 #main__page img.whole__page {
   margin-top: var(--margin-size);
   align-self: flex-end;
-  width: 90%;
+  width: 60%;
+  border: 2px solid var(--black-color);
+  border-radius: var(--border-radius);
+}
+
+#main__page .about {
+  font-size: var(--medium-font-size);
+  margin-top: var(--margin-size);
+  padding-bottom: var(--padding-size);
+}
+
+#main__page .lecture,
+#main__page .period,
+#main__page .contribution {
+  padding: var(--padding-size);
+  font-size: var(--small-font-size);
+}
+
+@media (max-width:768px) {
+  #main__page .inner {
+    padding: var(--padding-size);
+  }
+
+  #main__page img.whole__page {
+    width: 80%;
+  }
+}
+
+@media (max-width:350px) {
+  :root {
+    --biggest-font-size: 2em;
+  }
+
+  #main__page img.whole__page {
+    width: 100%;
+  }
 }
